update version A and B

--- a/src/prototype/app/views/layout.html
+++ b/src/prototype/app/views/layout.html
@@ -22,7 +22,7 @@
 {% block header %}
   {{ header({
     "service": {
-        "name": "Choose if your GP medical records is shared for research and planning",
+        "name": "Choose if the information from your GP record is shared for purposes other than your individual care",
         "href": "/"
       },
       "showNav": "false",
