--- a/src/prototype/app/views/version-a/request-confirmed-yes.html
+++ b/src/prototype/app/views/version-a/request-confirmed-yes.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-Type 1 Opt-out service: your request has been confirmed
+Type 1 Opt-out service: your choice has been confirmed
 {% endblock %}
 
 {% block content %}
