--- a/src/prototype/app/views/version-a/type1-question.html
+++ b/src/prototype/app/views/version-a/type1-question.html
@@ -8,7 +8,7 @@
 
 {% block outerContent %}
   {{ backLink({
-    "href": "/check-your-status-type1",
+    "href": "/version-a/check-your-status-type1",
     "text": "Back",
     "classes": "nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0"
   }) }}
@@ -37,7 +37,7 @@
   
           {% call fieldset({
             legend: {
-              text: "Do you allow your personally identifiable patient data to be shared outside of your GP practice for purposes except your own care to support health and care planning and research?",
+              text: "Do you allow your personally identifiable patient data to be shared outside your GP practice for purposes except your own care to support health and care planning and research?",
               classes: "nhsuk-fieldset__legend--l",
               isPageHeading: true
             }
