--- a/src/prototype/app/views/version-b/nhsuk-opt-out-of-sharing.html
+++ b/src/prototype/app/views/version-b/nhsuk-opt-out-of-sharing.html
@@ -139,7 +139,7 @@
   <div class="nhsuk-grid-column-two-thirds">
 
     <div class="nhsuk-u-reading-width">
-      <h1>Opt out of sharing your health records</h1>
+      <h1>Your health records: choose how they are used</h1>
       <h2>Why your data is important</h2>
       <p>
         The NHS uses information about patients (patient data) to research, plan and improve:
@@ -149,10 +149,10 @@
         <li>the treatment and care patients receive</li>
       </ul>
       <p>
-        We get this data from your GP surgery, hospitals and other healthcare providers. The organisation that collects your data is called <a href="https://digital.nhs.uk/about-nhs-digital/">NHS Digital</a>.
+        It is collected from your GP surgery, hospitals and other healthcare providers, by part of the NHS called <a href="https://digital.nhs.uk/about-nhs-digital/">NHS Digital</a>.
       </p>
       <p>
-        To help improve services, NHS Digital shares this data with researchers from organisations such as universities or hospitals. This type of data-sharing has been happening for many years.
+        To help improve services, NHS Digital shares some of this data with researchers from organisations such as universities or hospitals but there are strict rules around who can access data, why and how they can access it. This data has personal identifying information removed and replaced with a strictly guarded code. This type of data-sharing has been happening for many years.
       </p>
       <p>
         All data that is collected and shared is protected by strict rules around privacy, confidentiality and security.
@@ -164,12 +164,24 @@
       <p>
         Find out more about how NHS Digital is <a href="https://digital.nhs.uk/your-data">looking after your data</a>.
       </p>
+      <div class="nhsuk-u-padding-bottom-9"></div>
 
       <h2>Opting out of sharing your data</h2>
       <p>
-        You can choose whether or not your data is used for research and planning. There are different types of data-sharing you can opt out of.
+        You can choose whether your data is used for purposes other than your individual care.
       </p>
-      
+      <p>
+        In fact, you also have (other) choices for how your information is used to support your individual care, such as by opting out of having a Summary Care Record, or by applying choices offered by the computer system used by your GP. 
+      </p>
+
+      <img  width = "100%" height="100%" src="/images/diagram-type1-ndoo.png"/>
+      <div class="nhsuk-u-padding-bottom-3"></div>
+
+      <p>
+        If you do not want your personally identifiable patient data to be shared outside of your GP practice for purposes except direct care, you can choose to opt out in one of the following ways:
+      </p>
+      <div class="nhsuk-u-padding-bottom-3"></div>
+
       <details class="nhsuk-details">
         <summary class="nhsuk-details__summary">
           <span class="nhsuk-details__summary-text">
@@ -177,17 +189,14 @@
           </span>
         </summary>
         <div class="nhsuk-details__text">
-          <p>This is called the 'Type 1 Opt-out' and is applied to your GP record.</p>
+          <p>This is called <a href="/version-b/type-1-content/overview">‘Type 1 Opt-out’</a> and is applied to your GP patient information.</p>
+          <p>General Practice Data for Planning and Research (GPDPR) uses GP data to collect vital health and care planning and research. To find out more about how data is used, visit the <a href="https://digital.nhs.uk/data-and-information/data-collections-and-data-sets/data-collections/general-practice-data-for-planning-and-research">GPDPR webpage</a>.</p>
           <ul>
-            <li>General Practice Data for Planning and Research (GPDPR) uses GP data to collect vital health and care planning and research. To find out more about how data is used, visit the <a href="https://digital.nhs.uk/data-and-information/data-collections-and-data-sets/data-collections/general-practice-data-for-planning-and-research">GPDPR webpage</a>.</li>
-            <li>You may choose a Type 1 opt out for yourself by entering your choice in the <a href="/version-b/type1-question">Type 1 online service</a>.</li>
-            <li>You may request a Type 1 opt out for yourself or someone you care for by filling in an opt-out form and return it to your/their registered GP surgery. <a href="https://assets.nhs.uk/nhsuk-cms/documents/Type1Opt-outform.docx">Download a Type 1 Opt-out form </a></li>
+            <li>You may choose a Type 1 opt out for yourself by entering your choice in the <a href="/version-b/type-1-content/overview">Type 1 online service</a>.</li>
+            <li>You may request a Type 1 opt out for yourself or someone you care for by <a href="/version-b/type-1-content/other-ways-to-manage-your-choice">filling in an opt-out form</a> and return it to your/their registered GP surgery. </li>
             </ul>
-            <p>If you choose a Type 1 Opt-out, your GP will not share your data for research and planning. However, NHS Digital will still be able to collect and share data from other healthcare providers, such as hospitals.</p>
-            
-              <img width = "100%" height= "100%" src="/images/Picture1.png"/>
-             <p></p>
-            <p>Find out more about Type 1 Opt-out from NHS Digital's transparency notice</p>
+            <p>If you choose a Type 1 Opt-out, your GP will not share your personal confidential information for any purpose other than your direct care.</p>
+
           </div>
       </details>
 
@@ -198,14 +207,12 @@
           </span>
         </summary>
         <div class="nhsuk-details__text">
-          <p>This is called the 'National Data Opt-out' and is applied to your NHS health record.</p>
+          <p>This is called the 'National Data Opt-out' and is applied to your NHS health record at any organisation that has provided you with care, such as hospitals or clinics.</p>
           <ul>
-            <li>To opt out online or find out more, visit the <a href="/version-a/type-1-content/make-your-choice">Make your choice</a>National Data Opt-Out service page</a>.</li>
+            <li>To opt out online or find out more, visit <a href="https://www.nhs.uk/your-nhs-data-matters/manage-your-choice/">Make your choice</a>.</li>
             <li>If you choose this opt-out, NHS Digital and other health and care organisations will not be able to share any of your personal data with other organisations for research and planning, except in certain situations. For example, when required by law.</li>
-            <li>If you want to check if you have opted out, you can enter your details again visiting the <a href="/version-a/type-1-content/make-your-choice">Make your choice</a> or check your settings in the <a href="https://www.nhs.uk/nhs-app/">NHS App</a>.</li>
+            <li>If you want to check if you have opted out, you can enter your details again visiting <a href="https://www.nhs.uk/your-nhs-data-matters/manage-your-choice/">Make your choice</a> or check your settings in the <a href="https://www.nhs.uk/nhs-app/">NHS App</a>.</li>
           </ul>
-         
-            <img  width = "100%" height="100%" src="/images/Picture2.png"/>
             
         </div>
       </details>
@@ -218,7 +225,7 @@
         <h3 class="nhsuk-do-dont-list__label">Data used for your care</h3>
         <ul class="nhsuk-list nhsuk-list--tick">
           <p>
-            If you choose to opt out of sharing your data, your personal health information will still be used to make sure you get the treatment and care you need. For example, your data may be shared so that you can be referred to hospital or get a prescription.
+            If you choose to opt out of sharing your data using either the Type 1 Opt Out or the National Data Opt Out, your personal health information will still be used to make sure you get the treatment and care you need. For example, your data may be shared so that you can be referred to hospital or get a prescription.
           </p>
         </ul>
       </div>
