--- a/src/prototype/app/views/version-a/branching/answer-no.html
+++ b/src/prototype/app/views/version-a/branching/answer-no.html
@@ -8,7 +8,7 @@
 
 {% block outerContent %}
   {{ backLink({
-    "href": "/type1-question",
+    "href": "/version-a/type1-question",
     "text": "Back",
     "classes": "nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0"
   }) }}
@@ -28,7 +28,7 @@
           You answered 'No'
     
         </h3>
-        <p class="nhsuk-card__description">You do NOT allow your personally identifiable patient data to be shared outside your GP practice for purposes except your own care to support health and care planning and research. <a href="/version-a/type1-question-status">Change</a></p>
+        <p class="nhsuk-card__description">You do NOT allow your personally identifiable patient data to be shared outside your GP practice for purposes except your own care to support health and care planning and research. <a href="/version-a/type1-question">Change</a></p>
         <p class="nhsuk-card__description">We will send confirmation of your choice to your phone number ***321 and your email mat***@gmail.com</p>
       </div>
     </div>
