--- a/src/prototype/app/views/version-a/check-ID.html
+++ b/src/prototype/app/views/version-a/check-ID.html
@@ -11,7 +11,7 @@
 <nav class="nhsuk-breadcrumb" aria-label="Breadcrumb">
   <div class="nhsuk-width-container">
     <ol class="nhsuk-breadcrumb__list">
-      <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link">Choose if your GP medical records is shared for research and planning</a></li>
+      <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link">Choose if your GP medical records are shared for research and planning</a></li>
     </ol>
     <p class="nhsuk-breadcrumb__back">
       <a href="" class="nhsuk-breadcrumb__backlink">Back to Health A to Z</a>
