--- a/src/prototype/app/views/version-a/check-your-status-opt1-result-no.html
+++ b/src/prototype/app/views/version-a/check-your-status-opt1-result-no.html
@@ -15,7 +15,7 @@
       </h1>
 
       <p class="nhsuk-body-l">
-        You do NOT allow the use of your GP data to support vital health and care planning and research. <a href="https://service-manual.nhs.uk/design-system/componnets">Check what this means for you (Page opens in new window)</a>.
+        You do NOT allow your personally identifiable patient data to be shared outside your GP practice for purposes except your own care to support health and care planning and research. <a href="/version-a/type-1-content/overview">Check what this means for you (Page opens in new window)</a>.
       </p>
 
       <dl class="nhsuk-summary-list">
@@ -35,7 +35,7 @@
             Date of the request
           </dt>
           <dd class="nhsuk-summary-list__value">
-            9 June 2022
+            6 July 2022
           </dd>
 
         </div>
@@ -63,7 +63,7 @@
         
       </dl>
 
-      <a class="nhsuk-button" href="/type1-question" class="button">Change</a>
+      <a class="nhsuk-button" href="/version-a/type1-question" class="button">Change</a>
       
     </div>
   </div>
