--- a/src/prototype/app/views/version-a/nhsuk-opt-out-of-sharing.html
+++ b/src/prototype/app/views/version-a/nhsuk-opt-out-of-sharing.html
@@ -167,39 +167,39 @@
 
       <h2>Opting out of sharing your data</h2>
       <p>
-        You can choose whether or not your data is used for research and planning. There are different types of data-sharing you can opt out of.
+        You can choose if information about you, which is held by your GP, can be shared for research and planning. There are different types of data-sharing you can opt out.
       </p>
       
       <details class="nhsuk-details">
         <summary class="nhsuk-details__summary">
           <span class="nhsuk-details__summary-text">
-            Stop your GP surgery from sharing your data
+            Choose if your GP medical records are shared for research and planning
           </span>
         </summary>
         <div class="nhsuk-details__text">
           <p>This is called the 'Type 1 Opt-out'.</p>
           <ul>
-          <li>To check if you have opted out, you may use the <a href="/version-a/type1-question-status"> Type 1 online service </a>.</li>
-          <li>You may choose a Type 1 opt out for yourself by entering your choice in the <a href="/version-a/type1-question">Type 1 online service</a> </li>
+          <li>To check if you have opted out, you may use the <a href="/version-a/type-1-content/overview"> Type 1 online service</a>.</li>
+          <li>You may choose a Type 1 opt out for yourself by entering your choice in the <a href="/version-a/type-1-content/overview">Type 1 online service</a> </li>
           <li>You may request a Type 1 opt out for yourself or someone you care for by filling in an opt-out form and return it to your/their registered GP surgery. Download a Type 1 Opt-out form.</li>
+          </ul>
           <p>If you choose a Type 1 Opt-out, your GP will not share your data for research and planning. However, NHS Digital will still be able to collect and share data from other healthcare providers, such as hospitals.</p>
           <p>Find out more about Type 1 Opt-out from <a href="https://digital.nhs.uk/data-and-information/data-collections-and-data-sets/data-collections/general-practice-data-for-planning-and-research/transparency-notice">NHS Digital's transparency notice </a>
-          </ul>
           </div>
       </details>
 
       <details class="nhsuk-details">
         <summary class="nhsuk-details__summary">
           <span class="nhsuk-details__summary-text">
-            Stop NHS Digital and other health and care organisations from sharing your data for research and planning
+            Choose if NHS Digital and other health and care organisations can share your data for research and planning
           </span>
         </summary>
         <div class="nhsuk-details__text">
           <p>This is called the 'National Data Opt-out'.</p>
           <ul>
-            <li>To opt out online or find out more, visit <a href="/version-a/type-1-content/make-your-choice">Make your choice</a>.</li>
+            <li>To opt out online or find out more, visit <a href="https://www.nhs.uk/your-nhs-data-matters/manage-your-choice/">Make your choice</a>.</li>
             <li>If you choose this opt-out, NHS Digital and other health and care organisations will not be able to share any of your personal data with other organisations for research and planning, except in certain situations. For example, when required by law.</li>
-            <li>If you want to check if you have opted out, you can enter your details again visiting <a href="/version-a/type-1-content/make-your-choice">Make your choice</a> or check your settings in the <a href="/NHS-app-view">NHS App</a>.</li>
+            <li>If you want to check if you have opted out, you can enter your details again visiting <a href="https://www.nhs.uk/your-nhs-data-matters/manage-your-choice/">Make your choice</a> or check your settings in the <a href="https://www.nhs.uk/nhs-app/">NHS App</a>.</li>
           </ul>
           
         </div>
