--- a/src/prototype/app/views/version-b/check-your-status-type1.html
+++ b/src/prototype/app/views/version-b/check-your-status-type1.html
@@ -17,7 +17,7 @@
       </h1>
 
       <p class="nhsuk-body-l">
-        You do allow the use of your GP data to support vital health and care planning and research. <a href="https://service-manual.nhs.uk/design-system/componnets">Check what this means for you (Page opens in new window)</a>.</p>
+        You do allow the information from your GP record to be shared for purposes other than your individual care. <a href="/version-b/type-1-content/overview">Check what this means for you (Page opens in new window)</a>.</p>
   
         <dl class="nhsuk-summary-list">
           
@@ -26,55 +26,13 @@
               Status
             </dt>
             <dd class="nhsuk-summary-list__value">
-              Opted-in
+              Opted-in by default
             </dd>
-  
-          </div>
-          <div class="nhsuk-summary-list__row">
-            <dt class="nhsuk-summary-list__key">
-              Date of the request
-            </dt>
-            <dd class="nhsuk-summary-list__value">
-              21 April 2022
-            </dd>
-  
-          </div>
-  
-          <div class="nhsuk-summary-list__row">
-            <dt class="nhsuk-summary-list__key">
-              Requester
-            </dt>
-            <dd class="nhsuk-summary-list__value">
-              Default choice
-            </dd>
-  
-          </div>
-        
-          <div class="nhsuk-summary-list__row">
-            <dt class="nhsuk-summary-list__key">
-              Channel
-            </dt>
-            <dd class="nhsuk-summary-list__value">
-              NHS.uk website
-            </dd>
-  
-          </div>
 
         </dl>
 
 
       <a class="nhsuk-button" href="/version-b/type1-question" class="button">Change</a>
-
-      <details class="nhsuk-details">
-        <summary class="nhsuk-details__summary">
-          <span class="nhsuk-details__summary-text">
-            What does 'Default choice' mean?
-          </span>
-        </summary>
-        <div class="nhsuk-details__text">
-          <p>By default your confidential patient information is used for research and planning. You can choose to stop it by clicking on the button 'Change'.</p>      
-        </div>
-      </details>
 
     </div>
   </div>
