--- a/src/prototype/app/views/version-b/request-confirmed-no.html
+++ b/src/prototype/app/views/version-b/request-confirmed-no.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-Type 1 Opt-out service: your request has been confirmed
+Type 1 Opt-out service: your choice has been confirmed
 {% endblock %}
 
 {% block content %}
@@ -12,9 +12,11 @@ Type 1 Opt-out service: your request has been confirmed
       Your choice has been saved
     </h1>
     
-    <p>Your choice of 'NOT allowing your personally identifiable patient data to be shared outside your GP practice for purposes except your own care to support health and care planning and research' has been saved.</p>
+    <p>Your choice of 'NOT allowing the use of your GP data to be shared outside your GP practice for purposes other than individual care’ has been saved.</p>
     
     <p><a href="check-your-status-opt1-result-no">You can review your choice</a> and update it at any time using this service.</p> 
+
+    <p>To review or update your National Data Opt Out choice please <a href="https://www.nhs.uk/your-nhs-data-matters/">access the correct service</a>.</p>
 
     <div class="nhsuk-u-padding-bottom-9"></div>
 
