--- a/src/prototype/app/views/version-b/type-1-content/how-confidential-patient.html
+++ b/src/prototype/app/views/version-b/type-1-content/how-confidential-patient.html
@@ -135,7 +135,7 @@
 <nav class="nhsuk-breadcrumb" aria-label="Breadcrumb">
   <div class="nhsuk-width-container">
     <ol class="nhsuk-breadcrumb__list">
-      <li class="nhsuk-breadcrumb__item"><a href="https://www.nhs.uk/" class="nhsuk-breadcrumb__link">Home</a></li>
+      <li class="nhsuk-breadcrumb__item"><a href="/landing-page-prototype" class="nhsuk-breadcrumb__link">Home</a></li>
       <li class="nhsuk-breadcrumb__item"><a href="overview" class="nhsuk-breadcrumb__link">Choose if your GP medical records is shared for research and planning</a></li>
     </ol>
     <p class="nhsuk-breadcrumb__back">
@@ -155,7 +155,7 @@
     <div class="nhsuk-u-reading-width">
       <h1>How confidential patient information is used</h1>
       <p class="nhsuk-lede-text">
-        Choose if your personally identifiable patient data can be shared outside your GP practice for purposes except your own care to support health and care planning and research.
+        Choose if your GP patient information can be shared outside your GP practice for purposes other than your individual care.
       </p>
     </div>
 
@@ -196,7 +196,7 @@
     <div class="nhsuk-inset-text">
       <span class="nhsuk-u-visually-hidden">Find out how GP data is used for planning and research</span>
       <p>
-        Find out how GP data is used for planning and research on the NHS Digital website.
+        <a href="https://digital.nhs.uk/data-and-information/data-collections-and-data-sets/data-collections/general-practice-data-for-planning-and-research">Find out how GP data is used for planning and research on the NHS Digital website.</a>
       </p>
     </div>
 
