--- a/src/prototype/app/views/version-b/type-1-content/other-ways-to-manage-your-choice.html
+++ b/src/prototype/app/views/version-b/type-1-content/other-ways-to-manage-your-choice.html
@@ -135,7 +135,7 @@
 <nav class="nhsuk-breadcrumb" aria-label="Breadcrumb">
   <div class="nhsuk-width-container">
     <ol class="nhsuk-breadcrumb__list">
-      <li class="nhsuk-breadcrumb__item"><a href="https://www.nhs.uk/" class="nhsuk-breadcrumb__link">Home</a></li>
+      <li class="nhsuk-breadcrumb__item"><a href="/landing-page-prototype" class="nhsuk-breadcrumb__link">Home</a></li>
       <li class="nhsuk-breadcrumb__item"><a href="overview" class="nhsuk-breadcrumb__link">Choose if your GP medical records is shared for research and planning</a></li>
       <li class="nhsuk-breadcrumb__item"><a href="make-your-choice" class="nhsuk-breadcrumb__link">Make your choice</a></li>
     </ol>
@@ -156,7 +156,7 @@
     <div class="nhsuk-u-reading-width">
       <h1>Other ways to make a choice about sharing your GP data</h1>
       <p class="nhsuk-lede-text">
-        Find other ways to choose if your personally identifiable patient data can be shared outside your GP practice for purposes except your own care to support health and care planning and research.
+        Find other ways to choose if your GP patient information can be shared outside your GP practice for purposes other than your individual care.
       </p>
     </div>
 
