--- a/src/prototype/app/views/version-b/wizard/passing-data-check-answers.html
+++ b/src/prototype/app/views/version-b/wizard/passing-data-check-answers.html
@@ -9,7 +9,7 @@
 <nav class="nhsuk-breadcrumb" aria-label="Breadcrumb">
   <div class="nhsuk-width-container">
     <ol class="nhsuk-breadcrumb__list">
-      <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link">Choose if your GP medical records is shared for research and planning</a></li>
+      <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link">Choose if the information from your GP record is shared for purposes other than your individual care</a></li>
     </ol>
     <p class="nhsuk-breadcrumb__back">
       <a href="" class="nhsuk-breadcrumb__backlink">Back to Health A to Z</a>
@@ -36,7 +36,7 @@
             {{ data['first-name'] }} {{ data['last-name'] }}
           </dd>
           <dd class="nhsuk-summary-list__actions">
-            <a href="/version-a/wizard/passing-data-question-name">
+            <a href="/version-b/wizard/passing-data-question-name">
               Change<span class="nhsuk-u-visually-hidden"> name</span>
             </a>
           </dd>
@@ -50,7 +50,7 @@
             {{ data['example-day'] }} {{ data['example-month'] }} {{ data['example-year'] }}
           </dd>
           <dd class="nhsuk-summary-list__actions">
-            <a href="/version-a/wizard/passing-data-question-dob">
+            <a href="/version-b/wizard/passing-data-question-dob">
               Change<span class="nhsuk-u-visually-hidden"> data of birth</span>
             </a>
           </dd>        
@@ -64,7 +64,7 @@
             {{ data['nhsnumber'] }}
           </dd>
           <dd class="nhsuk-summary-list__actions">
-            <a href="/version-a/wizard/passing-data-question-nhs-number">
+            <a href="/version-b/wizard/passing-data-question-nhs-number">
               Change<span class="nhsuk-u-visually-hidden"> conditions</span>
             </a>
           </dd>
@@ -79,7 +79,7 @@
         <li>find your contact details from your health records so we can send you a security code</li>
       </ul>
 
-      <a href="/version-a/wizard/passing-data-get-security-code" class="nhsuk-button">Agree and submit</a>
+      <a href="/version-b/wizard/passing-data-get-security-code" class="nhsuk-button">Agree and submit</a>
 
     </div>
   </div>
