--- a/src/prototype/app/views/version-b/wizard/passing-data-question-know-nhs-number.html
+++ b/src/prototype/app/views/version-b/wizard/passing-data-question-know-nhs-number.html
@@ -9,7 +9,7 @@
 <nav class="nhsuk-breadcrumb" aria-label="Breadcrumb">
   <div class="nhsuk-width-container">
     <ol class="nhsuk-breadcrumb__list">
-      <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link">Choose if your GP medical records is shared for research and planning</a></li>
+      <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link">Choose if the information from your GP record is shared for purposes other than your individual care</a></li>
     </ol>
     <p class="nhsuk-breadcrumb__back">
       <a href="" class="nhsuk-breadcrumb__backlink">Back to Health A to Z</a>
@@ -22,7 +22,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/version-a/wizard/passing-data-question-nhs-number" method="post" class="form" autocomplete="off">
+      <form action="/version-b/wizard/passing-data-question-nhs-number" method="post" class="form" autocomplete="off">
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
