--- a/src/prototype/app/views/version-a/check-your-status-type1.html
+++ b/src/prototype/app/views/version-a/check-your-status-type1.html
@@ -17,7 +17,7 @@
       </h1>
 
       <p class="nhsuk-body-l">
-        You do allow your personally identifiable patient data to be shared outside your GP practice for purposes except your own care to support health and care planning and research. <a href="/version-a/type-1-content/overview">Check what this means for you (Page opens in new window)</a>.</p>
+        You allow your personally identifiable patient data to be shared outside your GP practice for purposes except your own care to support health and care planning and research. <a href="/version-a/type-1-content/overview">Check what this means for you (Page opens in new window)</a>.</p>
   
         <dl class="nhsuk-summary-list">
           
