--- a/src/prototype/app/views/version-a/nhsuk-opt-out-of-sharing.html
+++ b/src/prototype/app/views/version-a/nhsuk-opt-out-of-sharing.html
@@ -181,7 +181,7 @@
           <ul>
           <li>To check if you have opted out, you may use the <a href="/version-a/type-1-content/overview"> Type 1 online service</a>.</li>
           <li>You may choose a Type 1 opt out for yourself by entering your choice in the <a href="/version-a/type-1-content/overview">Type 1 online service</a> </li>
-          <li>You may request a Type 1 opt out for yourself or someone you care for by filling in an opt-out form and return it to your/their registered GP surgery. Download a Type 1 Opt-out form.</li>
+          <li>You may request a Type 1 opt out for yourself or someone you care for by filling in an opt-out form and return it to your/their registered GP surgery. <a class="app-download__link" href="https://assets.nhs.uk/nhsuk-cms/documents/Type1Opt-outform.docx">Download a Type 1 Opt-out form</a>.</li>
           </ul>
           <p>If you choose a Type 1 Opt-out, your GP will not share your data for research and planning. However, NHS Digital will still be able to collect and share data from other healthcare providers, such as hospitals.</p>
           <p>Find out more about Type 1 Opt-out from <a href="https://digital.nhs.uk/data-and-information/data-collections-and-data-sets/data-collections/general-practice-data-for-planning-and-research/transparency-notice">NHS Digital's transparency notice </a>
