--- a/src/prototype/app/views/version-b/check-your-status-opt1-result-no.html
+++ b/src/prototype/app/views/version-b/check-your-status-opt1-result-no.html
@@ -35,10 +35,7 @@
             Date of the request
           </dt>
           <dd class="nhsuk-summary-list__value">
-            <script>
-              var dt = new Date();
-              document.getElementById("datetime").innerHTML = dt.toLocaleDateString();
-              </script>
+            6 July 2022
           </dd>
 
         </div>
