--- a/src/prototype/app/views/version-b/check-your-status-type1.html
+++ b/src/prototype/app/views/version-b/check-your-status-type1.html
@@ -17,7 +17,7 @@
       </h1>
 
       <p class="nhsuk-body-l">
-        You do allow the information from your GP record to be shared for purposes other than your individual care. <a href="/version-b/type-1-content/overview">Check what this means for you (Page opens in new window)</a>.</p>
+        You allow the information from your GP record to be shared for purposes other than your individual care. <a href="/version-b/type-1-content/overview">Check what this means for you (Page opens in new window)</a>.</p>
   
         <dl class="nhsuk-summary-list">
           
