--- a/src/prototype/app/views/version-b/nhsuk-opt-out-of-sharing.html
+++ b/src/prototype/app/views/version-b/nhsuk-opt-out-of-sharing.html
@@ -175,7 +175,7 @@
       </p>
 
       <img  width = "100%" height="100%" src="/images/diagram-type1-ndoo.png"/>
-      <div class="nhsuk-u-padding-bottom-3"></div>
+      <div class="nhsuk-u-padding-bottom-9"></div>
 
       <p>
         If you do not want your personally identifiable patient data to be shared outside of your GP practice for purposes except direct care, you can choose to opt out in one of the following ways:
@@ -189,7 +189,7 @@
           </span>
         </summary>
         <div class="nhsuk-details__text">
-          <p>This is called <a href="/version-b/type-1-content/overview">‘Type 1 Opt-out’</a> and is applied to your GP patient information.</p>
+          <p>This is called ‘Type 1 Opt-out’ and is applied to your GP patient information.</p>
           <p>General Practice Data for Planning and Research (GPDPR) uses GP data to collect vital health and care planning and research. To find out more about how data is used, visit the <a href="https://digital.nhs.uk/data-and-information/data-collections-and-data-sets/data-collections/general-practice-data-for-planning-and-research">GPDPR webpage</a>.</p>
           <ul>
             <li>You may choose a Type 1 opt out for yourself by entering your choice in the <a href="/version-b/type-1-content/overview">Type 1 online service</a>.</li>
@@ -220,6 +220,8 @@
       <p>
         You can opt out, or opt back in again, at any time.
       </p>
+
+      <div class="nhsuk-u-padding-bottom-3"></div>
 
       <div class="nhsuk-do-dont-list">
         <h3 class="nhsuk-do-dont-list__label">Data used for your care</h3>
