--- a/src/prototype/app/views/version-b/request-confirmed-yes.html
+++ b/src/prototype/app/views/version-b/request-confirmed-yes.html
@@ -14,9 +14,12 @@ Type 1 Opt-out service: your choice has been confirmed
     
     <p>Your choice of 'allowing the use of your GP data to be shared outside your GP practice for purposes other than individual care’ has been saved.</p>
     
-    <p><a href="check-your-status-opt1-result-yes">You can review your choice</a> and update it at any time using this service.</p>
+    <p>You can review your choice and update it at any time using <a href="/version-b/type1-question-status">this service</a>.</p>
 
-    <p>To review or update your National Data Opt Out choice please <a href="https://www.nhs.uk/your-nhs-data-matters/">access the correct service</a>.</p>
+    <div class="nhsuk-inset-text">
+      <span class="nhsuk-u-visually-hidden">Review NDOO </span>
+      <p>To review or update your National Data Opt Out choice please <a href="https://www.nhs.uk/your-nhs-data-matters/">access the correct service</a>.</p>
+    </div>
 
     <div class="nhsuk-u-padding-bottom-9"></div>
 
