--- a/src/prototype/app/views/version-b/type-1-content/make-your-choice.html
+++ b/src/prototype/app/views/version-b/type-1-content/make-your-choice.html
@@ -185,6 +185,10 @@
       <li>change or check your current choice</li>
     </ul>
 
+    <p>If you're happy with your confidential patient information being used for purposes other than your individual care, you do not need to do anything.</p>
+
+    <div class="nhsuk-u-padding-bottom-3"></div>
+
     <p>
       Your choice will be applied by:
     </p>
