--- a/src/prototype/app/views/version-b/type-1-content/overview.html
+++ b/src/prototype/app/views/version-b/type-1-content/overview.html
@@ -189,6 +189,8 @@
       This information is also available in <a href="" title="Other languages and formats"></a>other languages and formats.
     </p>
 
+    <div class="nhsuk-u-padding-bottom-9"></div>
+
       <h2>
         Your choice
       </h2>
@@ -198,9 +200,12 @@
       <p>
         To stop your GP surgery from sharing your data for anything other than your individual care, you can register a Type 1 opt out by using the <a href="/version-b/type-1-content/make-your-choice">Type 1 online service</a> or submitting a <a href="/version-b/type-1-content/other-ways-to-manage-your-choice">Type 1 opt out form</a> to your GP Practice.
       </p>
-      <p>
-        If you're happy with your confidential patient information being used for planning and research, you do not need to do anything.
-      </p>
+
+      <div class="nhsuk-inset-text">
+        <span class="nhsuk-u-visually-hidden">Happy with current choice</span>
+        <p>If you're happy with your confidential patient information being used for purposes other than your individual care, you do not need to do anything.</p>
+      </div>
+
       <p>
         You can change how your patient information is used at any time.
       </p>
