--- a/src/prototype/app/views/version-b/type1-question-status-no.html
+++ b/src/prototype/app/views/version-b/type1-question-status-no.html
@@ -17,7 +17,7 @@
             Your current choice:
       
           </h3>
-          <p class="nhsuk-card__description">You allow the information from your GP record to be shared for purposes other than your individual care. <a href="/version-b/type-1-content/overview">Check what this means for you (Page opens in new window).</a></p>
+          <p class="nhsuk-card__description">You do NOT allow the information from your GP record to be shared for purposes other than your individual care. <a href="/version-b/type-1-content/overview">Check what this means for you (Page opens in new window).</a></p>
         </div>
       </div>
 
